# project-trading-agent

./: .env.example  Dockerfile  README.md  algo.py  docker-compose.yml  integration.md  pyproject.toml  rclone.conf.example  setup.md
.githooks/: pre-commit
docs/: ARCHITECTURE.md  IMPLEMENTATION_GUIDE.md  backup_recovery.md  final_audit_and_commercial_review.md  monitoring.md  onboarding_checklist.md  production_deployment.md  telegram_alerts.md  troubleshooting.md
monitoring/: dashboard.html
scripts/: backup.sh  backup_worker.py  deploy.sh  health_check.sh  logrotate_worker.py  ops_scripts.sh  restore.sh  update.sh
src/: config_loader.py  main.py  risk_manager.py
src/agent/: algo_decision_maker.py  decision_maker.py  prompts.py
src/app/: bootstrap.py
src/application/: cycle_runner.py  decision_pipeline.py  execution_service.py  market_data_service.py  reconciliation_service.py
src/config/: __init__.py  settings.py
src/domain/: __init__.py  models.py
src/exchanges/: __init__.py  base.py  dry_run.py  dry_run_margin_patch.py  hyperliquid_adapter.py
src/indicators/: local_indicators.py  taapi_client.py
src/interfaces/: __init__.py  api_server.py
src/risk/: __init__.py  policy.py
src/strategies/: __init__.py  ai_strategy.py  algo_strategy.py  base.py  executors.py
src/trading/: hyperliquid_api.py
src/utils/: alert_integrations.py  log_files.py  paths.py  risk_math.py  security.py  state_persistence.py  telegram_notifier.py
