[project]
name = "trading-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Arunaditya Lal",email = "lalarun0905@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "hyperliquid-python-sdk (>=0.20.0,<0.21.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "web3 (>=7.14.0,<8.0.0)",
    "aiohttp (>=3.13.1,<4.0.0)",
    "anthropic (>=0.52.0,<1.0.0)",
    "openai (>=1.79.0,<2.0.0)",
    "google-genai (>=1.16.0,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "rich (>=14.2.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
